[tool.poetry]
name = "repl_python3_bottest"
version = "0.1.0"
description = ""
authors = ["MacgyverCseh1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pycoingecko = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
